added role with indesnted vars

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,3 +12,6 @@ galaxy_info:
 dependencies:
   - role: nicholasburr.common
   - role: nicholasburr.sshd
+  - role: nicholasburr.unattended_upgrades
+      vars:
+        unattended_upgrades_mail_to: nbburr@gmail.com
