--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,5 +13,4 @@ dependencies:
   - role: nicholasburr.common
   - role: nicholasburr.sshd
   - role: nicholasburr.unattended_upgrades
-    vars:
-      unattended_upgrades_mail_to: nbburr@gmail.com
+  - role: nicholasburr.ssmtp
